# ai-agent-standards-mcp

./: PROJECT-STANDARDS.md  README.md  SKILL-REFERENCE.md  pyproject.toml
ai-agent-standards/: CHANGELOG.md  INDEX.md
ai-agent-standards/multi-agent/: README.md  coder-agent.md  documentation-agent.md  reviewer-agent.md  test-agent.md
ai-agent-standards/prompts/: HEADER-TEMPLATE.yaml
docs/: SKILLS_OVERVIEW.md  repo-map-for-agents.md
scripts/: install-mcp.py  run-mcp.cmd  run-mcp.ps1  run-mcp.py
skills/: README.md
skills/adaptive-language/: SKILL.md
skills/agent-eval/: SKILL.md
skills/context-help/: SKILL.md
skills/error-translator/: SKILL.md
skills/framework-onboarding/: SKILL.md
skills/session-templates/: brain.example.json
skills/workflow-audit/: SKILL.md
skills/workflow-brainstorm/: SKILL.md
skills/workflow-code/: SKILL.md
skills/workflow-customize/: SKILL.md
skills/workflow-debug/: SKILL.md
skills/workflow-deploy/: SKILL.md
skills/workflow-design/: SKILL.md
skills/workflow-help/: SKILL.md
skills/workflow-init/: SKILL.md
skills/workflow-next/: SKILL.md
skills/workflow-plan/: SKILL.md
skills/workflow-readme/: SKILL.md
skills/workflow-recap/: SKILL.md
skills/workflow-refactor/: SKILL.md
skills/workflow-review/: SKILL.md
skills/workflow-rollback/: SKILL.md
skills/workflow-run/: SKILL.md
skills/workflow-save_brain/: SKILL.md
skills/workflow-test/: SKILL.md
skills/workflow-visualize/: SKILL.md
src/agent_guidance_mcp/: project_scan.py
src/ai_agent_standards_mcp/: __main__.py  server.py
tests/: test_catalog.py  test_server_contract.py
