[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agent-guidance-mcp"
version = "3.1.0"
description = "MCP server exposing AI agent guidance resources, skills, prompts, and project context tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Agent Guidance MCP Maintainers" }
]
dependencies = [
  "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
agent-guidance-mcp = "agent_guidance_mcp.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_guidance_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "agent_guidance_mcp/bundled/README.md"
"PROJECT-STANDARDS.md" = "agent_guidance_mcp/bundled/PROJECT-STANDARDS.md"
"SKILL-REFERENCE.md" = "agent_guidance_mcp/bundled/SKILL-REFERENCE.md"
"docs" = "agent_guidance_mcp/bundled/docs"
"karpathy" = "agent_guidance_mcp/bundled/karpathy"
"skills" = "agent_guidance_mcp/bundled/skills"
"agent-guidance" = "agent_guidance_mcp/bundled/agent-guidance"
